Fix dropdown text wrapping and update upcoming_events description

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,3 +146,8 @@ a:hover {
   -webkit-line-clamp: var(--read-more-line-clamp, 3);
   line-clamp: var(--read-more-line-clamp, 3);
 }
+
+.dropdown-item {
+  white-space: normal;
+  word-wrap: break-word;
+}
